Added load event listener

--- a/pre-loaders/index.html
+++ b/pre-loaders/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="preloader">
+	<div class="preload">
 		<div class="plane">
 			<img src="img/airplane.png" alt="Plane" class="airplane">
 		</div>
@@ -17,6 +17,10 @@
 			<img src="img/cloud.png" alt="Cloud 4" class="cloud4">
 		</div>
 	</div>
+	<section class="home">
+		
+	</section>
 	
+	<script src="js/main.js"></script>
 </body>
 </html>
