--- a/pre-loaders/aeroplane/index.html
+++ b/pre-loaders/aeroplane/index.html
@@ -9,6 +9,7 @@
 	<div class="preload">
 		<div class="plane">
 			<img src="img/airplane.png" alt="Plane" class="airplane">
+			<h3 class="landing">Landing on the website</h3>
 		</div>
 		<div class="cloud">
 			<img src="img/cloud.png" alt="Cloud 1" class="cloud1">
